--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>To Do</title>
+  <title>Personal Planner</title>
 </head>
 
 <body>
